@@ -1,6 +1,7 @@
 06/25/2014 Oleg Moskalenko <mom040267@gmail.com>
 Version 3.2.3.95 'Marshal West':
 	- working on compilation warnings.
+	- Allocation mismatch condition fixed.
 	
 06/13/2014 Oleg Moskalenko <mom040267@gmail.com>
 Version 3.2.3.94 'Marshal West':
